tests/spec/emit/snapshots/generated_names_avoid_renamed_package_functions.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:fmt"
  import "go:strconv"
  
  fn get_items() -> Slice<int> { [1, 2, 3] }
  
  fn len() -> string { "context" }
  
  fn direct_let() -> int {
    let getItems = 5
    getItems + get_items().length()
  }
  
  fn filtered_let() -> int {
    let getItems = get_items().filter(|x| x > 1)
    getItems.length() + get_items().length()
  }
  
  fn parameter(getItems: int) -> int {
    let (first, rest) = (getItems, 2)
    first + rest + get_items().length()
  }
  
  fn arm_in_other_arm() {
    match strconv.Atoi("bad") {
      Ok(len) => fmt.Println(len),
      Err(_) => fmt.Println(len()),
    }
  }
---
package main

import (
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func getItems() []int {
	return []int{1, 2, 3}
}

func len_() string {
	return "context"
}

func directLet() int {
	getItems_1 := 5
	return getItems_1 + len(getItems())
}

func filteredLet() int {
	var result []int
	for _, x := range getItems() {
		if x > 1 {
			result = append(result, x)
		}
	}
	getItems_1 := result
	return len(getItems_1) + len(getItems())
}

func parameter(getItems_1 int) int {
	tmp := lisette.MakeTuple2[int, int](getItems_1, 2)
	first := tmp.First
	rest := tmp.Second
	return first + rest + len(getItems())
}

func armInOtherArm() {
	if len__1, err := strconv.Atoi("bad"); err == nil {
		fmt.Println(len__1)
	} else {
		fmt.Println(len_())
	}
}
